[package]
name = "actix-web-async-std"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[dependencies]
actix-web = { git = "https://github.com/actix/actix-web", branch = "async-std", features = ["openssl", "rustls"] }
actix-http = { git = "https://github.com/actix/actix-web", branch = "async-std", features = ["openssl", "rustls"] }
actix-server = { git = "https://github.com/fakeshadow/actix-net", branch = "feat/type_alias_impl_trait" }

async-std = { version = "1.7.0", features = ["unstable"] }
async-io = "1.3.1"
openssl = "0.10"
tokio = { version = "0.2.23", default-features = false }

[patch.crates-io]
actix-http = { git = "https://github.com/actix/actix-web", branch = "async-std", features = ["openssl", "rustls"] }
actix-rt = { git = "https://github.com/fakeshadow/actix-net", branch = "feat/type_alias_impl_trait" }
actix-server = { git = "https://github.com/fakeshadow/actix-net", branch = "feat/type_alias_impl_trait" }
actix-service = { git = "https://github.com/fakeshadow/actix-net", branch = "feat/type_alias_impl_trait" }
actix-utils = { git = "https://github.com/fakeshadow/actix-net", branch = "feat/type_alias_impl_trait" }
actix-connect = { git = "https://github.com/fakeshadow/actix-net", branch = "feat/type_alias_impl_trait" }
actix-tls = { git = "https://github.com/fakeshadow/actix-net", branch = "feat/type_alias_impl_trait" }
actix-router = { git = "https://github.com/fakeshadow/actix-net", branch = "feat/type_alias_impl_trait" }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
