[package]
name = "actix-web-async-std"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[dependencies]
actix-web = { git = "https://github.com/actix/actix-web", branch = "async-std", features = ["openssl", "rustls"] }
actix-http = { git = "https://github.com/actix/actix-web", branch = "async-std", features = ["openssl", "rustls"] }
actix-server = { git = "https://github.com/fakeshadow/actix-net", branch = "private" }
actix-codec = { git = "https://github.com/fakeshadow/actix-net", branch = "private" }

async-std = { version = "1.7.0", features = ["unstable", "tokio03"] }
async-io = "1.3.1"
openssl = "0.10"

[patch.crates-io]
actix-http = { git = "https://github.com/actix/actix-web", branch = "async-std", features = ["openssl", "rustls"] }
actix-rt = { git = "https://github.com/fakeshadow/actix-net", branch = "private" }
actix-server = { git = "https://github.com/fakeshadow/actix-net", branch = "private" }
actix-service = { git = "https://github.com/fakeshadow/actix-net", branch = "private" }
actix-utils = { git = "https://github.com/fakeshadow/actix-net", branch = "private" }
actix-connect = { git = "https://github.com/fakeshadow/actix-net", branch = "private" }
actix-tls = { git = "https://github.com/fakeshadow/actix-net", branch = "private" }
actix-router = { git = "https://github.com/fakeshadow/actix-net", branch = "private" }
actix-codec = { git = "https://github.com/fakeshadow/actix-net", branch = "private" }
h2 = { git = "https://github.com/hyperium/h2.git" }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
